--- a/index.html
+++ b/index.html
@@ -117,5 +117,30 @@
   <!-- Contact Form -->
   <section id="contact" class="py-16 px-6 md:px-20 bg-white">
     <div class="max-w-3xl mx-auto">
-      <h2 class="text-3xl font-bold mb-6 text-center text-indigo-900">Contáctanos</h2>
-      <form action="YOUR_ENDPOINT_URL_HERE" method="
+      <h2 class="text-3xl font-bold mb-6 text-center">Contáctanos</h2>
+      <form action="YOUR_ENDPOINT_URL_HERE" method="POST" class="space-y-6 bg-gray-100 p-8 rounded-lg shadow">
+        <div>
+          <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
+          <input type="text" id="name" name="name" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500">
+        </div>
+        <div>
+          <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+          <input type="email" id="email" name="email" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500">
+        </div>
+        <div>
+          <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
+          <textarea id="message" name="message" rows="4" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500"></textarea>
+        </div>
+        <button type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-3 px-6 rounded-lg shadow-lg transition">Send Message</button>
+      </form>
+      <p class="text-center mt-6 text-gray-600">Or email us directly at <a href="mailto:sebecruz7@hotmail.com" class="text-indigo-600">sebecruz7@hotmail.com</a></p>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-gray-800 text-white py-6 text-center">
+    <p>&copy; 2026 Dual Journey. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
