--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <section id="contact" class="py-16 px-6 md:px-20 bg-white">
     <div class="max-w-3xl mx-auto">
       <h2 class="text-3xl font-bold mb-6 text-center">Contáctanos</h2>
-      <form action="YOUR_ENDPOINT_URL_HERE" method="POST" class="space-y-6 bg-gray-100 p-8 rounded-lg shadow">
+      <form action="mailto:sebecruz7@hotmail.com" method="POST" class="space-y-6 bg-gray-100 p-8 rounded-lg shadow">
         <div>
           <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
           <input type="text" id="name" name="name" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500">
